--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,11 +1,11 @@
 {
 	"compilerOptions": {
 		"module": "ESNext",
-		"moduleResolution": "Node",
+		"moduleResolution": "NodeNext",
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": true,
-		"noImplicitAny": true,
+		"noImplicitAny": false,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"outDir": "lib",
@@ -14,8 +14,9 @@
 		"lib": ["ESNext"],
 		"target": "ESNext",
 		"allowSyntheticDefaultImports": true,
-		"baseUrl": "./"
+		"baseUrl": "."
 	},
 	"compileOnSave": true,
-	"include": ["src", ".eslintrc.cjs"]
+	"include": ["src", ".eslintrc.cjs"],
+	"exclude": ["node_modules"]
 }
