--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "ESNext",
+		"module": "CommonJS",
 		"moduleResolution": "Node",
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
@@ -12,7 +12,7 @@
 		"sourceMap": true,
 		"strict": true,
 		"lib": ["ESNext"],
-		"target": "ESNext",
+		"target": "ES2020",
 		"allowSyntheticDefaultImports": true,
 		"baseUrl": "."
 	},
